<Edit> Changed button text to align center so it is displayed correctly on browsers

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ button {
   border-radius: 25px;
   border: none;
   box-shadow: 0 0 5px black;
+  text-align: center;
 }
 
 button:hover {
